@@ -1,10 +1,15 @@
 4.14.1 (unreleased)
 -------------------
+
+- Added `scripts/comms2csv.py` and `scripts/csv2comms.py` script for
+  converting Communication archives to/from a CSV file of TJSONProtocol
+  encoded Communications
+
 - Updated Thrift dependency from 0.10.0 to 0.11.0
 
 - Added `--uri` flag for THttp/TJSONProtocol support to
-`scripts/annotate-communication-client.py` and
-`scripts/fetch-client.py`
+  `scripts/annotate-communication-client.py` and
+  `scripts/fetch-client.py`
 
 - Added Concrete Service wrappers using Thrift THttp/TJSONProtocol
 
